--- a/data-collect/src/main/resources/application.yml
+++ b/data-collect/src/main/resources/application.yml
@@ -1,3 +1,6 @@
 server:
   port: 8080
 spring.profiles.include: core
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
