--- a/data-collect/src/main/resources/application.yml
+++ b/data-collect/src/main/resources/application.yml
@@ -4,3 +4,13 @@ spring.profiles.include: core
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+spring:
+  application:
+    name: PROVIDE-SERVER
+eureka:
+  instance:
+    #注册到注册中心的名字
+    appname: PROVIDE-SERVER
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:7070/eureka/
