--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<webData.version>1.0.0</webData.version>
+		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
 	</properties>
 
 
@@ -39,13 +40,21 @@
         <!--H5编辑器-->
         <!--<module>canvas-editor</module>-->
         <!--注册中心-->
-        <!--<module>registry</module>-->
+        <module>data-registry</module>
 
 	</modules>
 
 	<!-- 版本说明：这里统一管理依赖的版本号 -->
 	<dependencyManagement>
-
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
 	</dependencyManagement>
 
 	<build>
